# plexus

./: .gitignore  CHANGELOG.md  COMPARISON.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: tour.py
manifests/: crucible.interop.json  forum.interop.json  gather.interop.json  index.interop.json  mneme.interop.json
src/plexus/: __init__.py  __main__.py  cli.py  graph.py  manifest.py  mcp.py  mesh.py  plan.py  receipt.py  registry.py  run.py
tests/: test_plexus_core.py  test_plexus_cycle9.py  test_plexus_grounding.py  test_plexus_manifests.py  test_plexus_mcp.py  test_plexus_receipt.py  test_plexus_render.py  test_qcr_replay_routing.py
